Trainer verification
