# app/Models/Trainer.ts
@@ -1,6 +1,7 @@
 import { DateTime } from 'luxon'
-import { BaseModel, column, hasMany, HasMany } from '@ioc:Adonis/Lucid/Orm'
+import { BaseModel, column, hasMany, HasMany, hasOne, HasOne } from '@ioc:Adonis/Lucid/Orm'
 import Plan from 'App/Models/Plan'
+import Verification from 'App/Models/Verification'
 
 export default class Trainer extends BaseModel {
   @column({ isPrimary: true })
@@ -8,6 +9,9 @@ export default class Trainer extends BaseModel {
 
   @column()
   public external_id: string
+
+  @hasOne(() => Verification)
+  public verification: HasOne<typeof Verification>
 
   @hasMany(() => Plan)
   public plans: HasMany<typeof Plan>
